Add landmarks data

--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -5,7 +5,7 @@
   width: 100vw;
   height: 100vh;
   z-index: 0; */
-  position: fixed;
+  /* position: fixed; */
   height: 400px;
   width: 100%;
   border-radius: 5px;
@@ -16,6 +16,16 @@
   font-size: 50px;
   color: #ffcc00;
   text-shadow: 2px 2px 4px #000;
+}
+
+@keyframes float {
+  0%,
+  100% {
+    transform: translateY(0) rotate(-15deg);
+  }
+  50% {
+    transform: translateY(-10px) rotate(-15deg);
+  }
 }
 
 @media (max-width: 768px) {
