--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  min-height: 100vh;
 
   color-scheme: light dark;
   color: rgba(20, 31, 230, 0.87);
