--- a/src/components/LandmarkList/LandmarkList.css
+++ b/src/components/LandmarkList/LandmarkList.css
@@ -6,4 +6,10 @@
 
 .landmark-list__controls {
   margin: 25px 0 0;
+  display: flex;
+  justify-content: center;
+}
+
+.landmark-list__filter {
+  margin-right: 10px;
 }
