--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -5,7 +5,7 @@
   width: 100vw;
   height: 100vh;
   z-index: 0; */
-  /* position: fixed; */
+  margin-top: 115px;
   height: 600px;
   width: 100%;
   border-radius: 5px;
