--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,5 @@
 .header {
   position: fixed;
-  position: fixed;
   top: 0;
   left: 0;
   z-index: 3;
@@ -15,6 +14,7 @@
   border-bottom: 1px solid currentColor;
   font-variation-settings: "wght" 240;
   letter-spacing: -0.04em;
+  margin-bottom: 15px;
 }
 
 .header__title {
@@ -33,10 +33,13 @@
   background-image: url(../images/BSRT.png);
 }
 
-.header__nav-list {
-  cursor: pointer;
+.header__nav {
   display: flex;
   justify-content: space-evenly;
   list-style: none;
-  color: black;
+}
+
+.header__nav-list {
+  cursor: pointer;
+  padding: 10px;
 }
