--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 @import "./vendor/fonts.css";
 
-* {
+/* * {
   outline: 1px solid red;
-}
+} */
 
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
