--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 } */
 
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Montserrat";
   line-height: 1.5;
   font-weight: 400;
   min-height: 100vh;
