--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -81,6 +81,8 @@
 }
 
 .main__filters-title {
+  display: flex;
+  justify-content: center;
   font-size: 2rem;
   font-weight: 700;
   color: #792008;
@@ -89,6 +91,7 @@
 
 .main__filters-tags {
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
   gap: 16px;
   margin-bottom: 15px;
@@ -119,6 +122,7 @@
 .main__filters-controls {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   gap: 32px;
 }
 
