--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -13,13 +13,8 @@
 
 .header__navbar {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  padding: 0;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  justify-content: space-between;
   width: 100%;
-  height: 150px;
   gap: 12px;
 }
 
@@ -34,20 +29,23 @@
   justify-content: center;
 }
 
-.header__logo {
-  background-image: url(../images/BSRT.png);
+.header__nav-logo {
+  max-width: 140px;
+  max-height: 100px;
 }
 
 .header__nav {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: flex-end;
   list-style: none;
 }
 
 .header__nav-list {
   cursor: pointer;
   padding: 10px;
+  margin: 5px;
 }
+
 .header__subtitle {
   font-family: "Montserrat";
   font-size: 20px;
