--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -30,7 +30,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* margin-top: 15px; */
 }
 
 .main__trip-summary-title {
@@ -42,7 +41,7 @@
 
 .main__trip-summary-subtitle {
   color: #b6451d;
-  margin: 5px 5px 24px;
+  margin: 5px 5px 14px;
 }
 
 .main__trip-summary-boxes {
@@ -64,13 +63,14 @@
 .main__trip-summary-label {
   color: #b6451d;
   font-size: 17px;
+  margin: 8px 0;
 }
 
 .main__trip-summary-value {
   font-weight: 700;
   color: #f97316;
   font-size: 24px;
-  margin-top: 8px;
+  margin: 8px 0 8px;
 }
 
 .main__filters {
@@ -92,14 +92,14 @@
   font-size: 2rem;
   font-weight: 700;
   color: #792008;
-  margin: 10px;
+  margin: 5px 5px 10px 5px;
 }
 
 .main__filters-tags {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  gap: 16px;
+  gap: 5px;
   margin-bottom: 15px;
 }
 
