--- a/src/components/LandmarkList/LandmarkList.css
+++ b/src/components/LandmarkList/LandmarkList.css
@@ -11,7 +11,7 @@
   padding: 15px;
   box-shadow: 4px 6px #ffb38a;
   box-sizing: border-box;
-  /* margin-inline: auto; */
+  margin-inline: auto;
   margin-top: 40px;
 }
 
