--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -48,12 +48,15 @@
   font-family: "Montserrat";
   line-height: 1.5;
   font-weight: 400;
+  font-size: 16px;
 }
 
 .header__nav-list {
   cursor: pointer;
   padding: 10px;
   margin: 5px;
+  display: flex;
+  align-items: center;
 }
 
 .header__nav-link {
