--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -51,6 +51,14 @@
   font-size: 16px;
 }
 
+.header__signup-btn {
+  background-color: transparent;
+  border-style: none;
+  color: #ffffff;
+  cursor: pointer;
+  font-size: 16px;
+}
+
 .header__nav-list {
   cursor: pointer;
   padding: 10px;
