--- a/src/components/DistanceBarChart/DistanceBarChart.css
+++ b/src/components/DistanceBarChart/DistanceBarChart.css
@@ -3,17 +3,23 @@
   max-width: 1000px;
   margin: 32px auto;
   padding: 1rem;
-  background-color: #fff;
+  background-color: #ffffff;
   border-radius: 12px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  border: 2px solid #f97316;
+  border-radius: 20px;
+  box-shadow: 4px 6px #ffb38a;
 }
+
+.barchart__title {
+  font-size: 32px;
+  font-weight: 700;
+  color: #792008;
+  margin: 30px 5px 10px 5px;
+}
+
 @media screen and (max-width: 768px) {
   .barchart__container {
     padding: 0.5rem;
     margin: 1rem;
-  }
-
-  .barchart__container .js-plotly-plot {
-    font-size: 12px;
   }
 }
