--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -89,7 +89,7 @@
 .main__filters-title {
   display: flex;
   justify-content: center;
-  font-size: 2rem;
+  font-size: 32px;
   font-weight: 700;
   color: #792008;
   margin: 5px 5px 10px 5px;
