--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -19,7 +19,6 @@
 }
 
 .header__title {
-  font-family: "Montserrat";
   font-size: 40px;
   color: #ffffff;
   margin: 0;
@@ -61,7 +60,7 @@
 
 .header__nav-list {
   cursor: pointer;
-  padding: 10px;
+  padding: 2px;
   margin: 5px;
   display: flex;
   align-items: center;
@@ -73,7 +72,34 @@
 }
 
 .header__subtitle {
-  font-family: "Montserrat";
   font-size: 20px;
   margin: 0 20px 20px;
+}
+
+@media screen and (max-width: 627px) {
+  .header {
+    padding: 1px;
+  }
+
+  .header__title {
+    font-size: 20px;
+    padding: 0 0 10px 0;
+  }
+
+  .header__subtitle {
+    font-size: 16px;
+  }
+
+  .header__nav {
+    padding: 0;
+  }
+
+  .header__nav-list {
+    margin: 0px;
+  }
+
+  .header__nav-logo {
+    height: 75px;
+    width: 140px;
+  }
 }
