--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -77,3 +77,11 @@
   font-size: 20px;
   margin: 0 20px 20px;
 }
+
+@media (max-width: 600px) {
+  .header {
+    flex-direction: column;
+    padding: 1rem;
+    text-align: center;
+  }
+}
