--- a/src/components/LandmarkList/LandmarkList.css
+++ b/src/components/LandmarkList/LandmarkList.css
@@ -88,6 +88,18 @@
   border-radius: 4px;
 }
 
+@media screen and (min-width: 601px) and (max-width: 905px) {
+  .landmark-list {
+    width: 95%;
+    padding: 12px;
+    margin-top: 30px;
+  }
+
+  .landmark-list__title {
+    font-size: 28px;
+  }
+}
+
 @media (max-width: 600px) {
   .landmark-list {
     width: 90%;
