--- a/src/components/DistanceBarChart/DistanceBarChart.css
+++ b/src/components/DistanceBarChart/DistanceBarChart.css
@@ -1,6 +1,6 @@
 .barchart__container {
-  width: 100%;
-  max-width: 1000px;
+  /* width: 100%; */
+  max-width: 850px;
   margin: 32px auto;
   padding: 1rem;
   background-color: #ffffff;
@@ -21,5 +21,18 @@
   .barchart__container {
     padding: 0.5rem;
     margin: 1rem;
+  }
+}
+
+@media (max-width: 600px) {
+  .barchart__container {
+    width: 520px;
+    margin-inline: auto;
+  }
+}
+
+@media (max-width: 480px) {
+  .barchart__container {
+    width: 400px;
   }
 }
