--- a/src/components/LandmarkList/LandmarkList.css
+++ b/src/components/LandmarkList/LandmarkList.css
@@ -5,7 +5,7 @@
   align-items: center;
   justify-content: center;
   background-color: #fff;
-  width: 830px;
+  width: 895px;
   border: 2px solid #f97316;
   border-radius: 20px;
   padding: 15px;
@@ -86,4 +86,22 @@
 .landmark-list__card-scroll::-webkit-scrollbar-thumb {
   background: #ffb38a;
   border-radius: 4px;
+}
+
+@media (max-width: 768px) {
+  .landmark-list {
+    width: 700px;
+  }
+}
+
+@media (max-width: 600px) {
+  .landmark-list {
+    max-width: 540px;
+  }
+}
+
+@media (max-width: 480px) {
+  .landmark-list {
+    max-width: 420px;
+  }
 }
