--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  max-width: 1200px;
+  max-width: 900px;
   width: 100%;
   height: 100%;
   padding: 20px;
@@ -32,4 +32,22 @@
   margin: 32px auto;
   max-width: 1200px;
   position: relative;
+}
+
+@media (max-width: 768px) {
+  .map {
+    width: 700px;
+  }
+}
+
+@media (max-width: 600px) {
+  .map {
+    width: 540px;
+  }
+}
+
+@media (max-width: 480px) {
+  .map {
+    width: 420px;
+  }
 }
