--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,35 @@
 .footer {
-  margin-top: 70px;
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  color: #fff;
+  margin-top: 70px;
+  padding: 20px 40px;
+  font-family: "Montserrat";
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.5;
   background: linear-gradient(90deg, #ff6a00 0%, #ff9500 100%);
   padding: 20px 60px;
+}
+
+.footer__left,
+.footer__center,
+.footer__right {
+  display: flex;
+  align-items: center;
+  margin: 5px 0;
+}
+
+.footer__logo {
+  max-width: 140px;
+  max-height: 100px;
+  margin-right: 8px;
+  border-radius: 5px;
+}
+
+.footer__title {
+  font-weight: bold;
+  font-size: 32px;
 }
