--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,8 +1,6 @@
 .footer {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: center;
   color: #fff;
   margin-top: 70px;
   padding: 20px 40px;
@@ -11,17 +9,17 @@
   font-weight: 400;
   line-height: 1.5;
   background: linear-gradient(90deg, #ff6a00 0%, #ff9500 100%);
-  padding: 20px 60px;
 }
 
-.footer__left,
-.footer__center,
-.footer__right {
+.footer__container {
   display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
   align-items: center;
-  margin: 5px 0;
+  justify-content: center;
+  gap: 50px;
+  text-align: center;
 }
-
 .footer__logo {
   max-width: 140px;
   max-height: 100px;
@@ -32,4 +30,22 @@
 .footer__title {
   font-weight: bold;
   font-size: 32px;
+}
+.footer__team {
+  font-size: 20px;
+}
+
+@media screen and (max-width: 600px) {
+  .footer__container {
+    flex-direction: column;
+    gap: 15px;
+  }
+
+  .footer__title {
+    font-size: 25px;
+  }
+
+  .footer__team {
+    font-size: 0.95rem;
+  }
 }
